fix: fix flag logo alignment on mobile

--- a/packages/components/src/flowNavigation/FlowNavigation.less
+++ b/packages/components/src/flowNavigation/FlowNavigation.less
@@ -12,6 +12,7 @@
     opacity: 1;
     transform: rotate(0deg);
     position: absolute;
+    top: var(--size-8);
     transform-origin: 12px center;
     transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
     z-index: 0;
